CHANGES
=======

tip (unreleased)
----------------

- added ChoiceEnum
- added South support for custom model fields

0.3.0
-----

* Added ``QueryManager``
