@@ -57,6 +57,73 @@ Be careful not to add new choices in the middle of the list, as that
 will change the numerical ids for all subsequent choices, which could
 impact existing data.
 
+fields.SplitField
+=================
+
+A ``TextField`` subclass that automatically pulls an excerpt out of
+its content (based on a "split here" marker or a default number of
+initial paragraphs) and stores both its content and excerpt values in
+the database.
+
+A ``SplitField`` is easy to add to any model definition::
+
+    from django.db import models
+    from model_utils.fields import SplitField
+
+    class Article(models.Model):
+        title = models.CharField(max_length=100)
+        body = SplitField()
+
+``SplitField`` automatically creates an extra non-editable field
+``_body_excerpt`` to store the excerpt. This field doesn't need to be
+accessed directly; see below.
+
+Accessing a SplitField on a model
+---------------------------------
+
+When accessing an attribute of a model that was declared as a
+``SplitField``, a ``SplitText`` object is returned.  The ``SplitText``
+object has two attributes:
+
+``content``:
+    The full field contents.
+``excerpt``:
+    The excerpt of ``content`` (read-only).
+
+This object also has a ``__unicode__`` method that returns the full
+content, allowing ``SplitField`` attributes to appear in templates
+without having to access ``content`` directly.
+
+Assuming the ``Article`` model above::
+
+    >>> a = Article.objects.all()[0]
+    >>> a.body.content
+    u'some text\n\n<!-- split -->\n\nmore text'
+    >>> a.body.excerpt
+    u'some text\n'
+    >>> unicode(a.body)
+    u'some text\n\n<!-- split -->\n\nmore text'
+
+Assignment to ``a.body`` is equivalent to assignment to
+``a.body.content``.
+
+.. note::
+    a.body.excerpt is only updated when a.save() is called
+
+
+Customized excerpting
+---------------------
+
+By default, ``SplitField`` looks for the marker ``<!-- split -->``
+alone on a line and takes everything before that marker as the
+excerpt. This marker can be customized by setting the ``SPLIT_MARKER``
+setting.
+
+If no marker is found in the content, the first two paragraphs (where
+paragraphs are blocks of text separated by a blank line) are taken to
+be the excerpt. This number can be customized by setting the
+``SPLIT_DEFAULT_PARAGRAPHS`` setting.
+
 models.InheritanceCastModel
 ===========================
 
